--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
     overflow: hidden;
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    tap-highlight-color: rgba(0, 0, 0, 0);
+    touch-callout: none;
+    user-select: none;
 }
 
 .flex {
@@ -22,6 +28,7 @@ body {
     background: linear-gradient(-45deg, rgba(255, 0, 79, 0.5), rgba(0, 192, 255, 0.5)), url(backgroundColor.jpg) center center / cover no-repeat;
     width: 100vw;
     height: 30vh;
+    transition:0.5s;
 }
 
 #title {
@@ -104,4 +111,9 @@ body {
     .pageLinkTitleBox {
         width: calc(95vw - 15vh);
     }
+
+    .pageLinkTitle {
+        font-size: 5vh;
+    }
+
 }
